--- a/packages/theme/styles/foundation.scss
+++ b/packages/theme/styles/foundation.scss
@@ -34,7 +34,7 @@
 
   // Shadow Colors
   --hi-shadow-color: rgba(0, 0, 0, 0.1);
-  --hi-glow-color: rgba(255, 255, 255, 0.5);
+  --hi-glow-color: rgba(123, 207, 166, 0.5);
 
   // ============================================
   // 2. Border Radius System
